--- a/NegotiationGame.v2/Client/Components/CCoin2.razor
+++ b/NegotiationGame.v2/Client/Components/CCoin2.razor
@@ -14,7 +14,10 @@
 <MudContainer Class="d-flex justify-center align-center ">
 <MudImage Src="main-page/coinred.svg" Alt="Mony the dog"  Class="rounded-lg"/>
 </MudContainer>
-<MudContainer Class="d-flex justify-center align-center "></MudContainer>
+
+<MudContainer   Class="d-flex justify-center align-center ">
+<MudText Typo="Typo.h1" Class="@Classname">@Text</MudText>    
+</MudContainer>
 @*
 <MudPaper Width="100px" Style="background-image:url('main-page/coinRed.svg');">
      <MudText Typo="Typo.h1" Class="@Classname">@Text</MudText>
