Added GameData as Singleton
Connected all Components with the GameData Class. GameData gets injected as a Singleton. So every Component shares the same GameData state

--- a/NegotiationGame.v2/Client/Components/Coin.razor
+++ b/NegotiationGame.v2/Client/Components/Coin.razor
@@ -1,24 +1,24 @@
 ﻿<div style="max-width:500px;">
-    @if (_color is not "")
+    @if (_color is not null)
     {
         <svg viewBox="0 0 100 100" width="100%" height="auto" xmlns="http://www.w3.org/2000/svg">
             <circle fill="#888c86" cx="50" cy="50" r="50"/>
-            @if (_color is "blue")
+            @switch (_color)
             {
-                <circle fill="#009cd9" cx="50" cy="50" r="40"/>
-                <rect fill="#ffffff" stroke="#000" stroke-miterlimit="10" stroke-width="0.4px" transform-origin="50% 50%" transform="scale(0.565)" width="100%" height="100%"/>
-
-            }
-            @if (_color is "red")
-            {
-                <circle fill="#D01515" cx="50" cy="50" r="40"/>
-                <rect fill="#ffffff" stroke="#000" stroke-miterlimit="10" stroke-width="0.8px" transform-origin="50% 50%" transform="scale(0.56) rotate(45)" width="100%" height="100%"/>
-
-            }
-            @if (_color is "yellow")
-            {
-                <circle fill="#fde71b" cx="50" cy="50" r="40"/>
-                <circle fill="#ffffff" stroke="#000" stroke-miterlimit="10" stroke-width="0.4px" cx="50" cy="50" r="30"/>
+                case CoinColor.Blue:
+                    <circle fill="#009cd9" cx="50" cy="50" r="40"/>
+                    <rect fill="#ffffff" stroke="#000" stroke-miterlimit="10" stroke-width="0.4px" transform-origin="50% 50%" transform="scale(0.565)" width="100%" height="100%"/>
+                    break;
+                case CoinColor.Red:
+                    <circle fill="#D01515" cx="50" cy="50" r="40"/>
+                    <rect fill="#ffffff" stroke="#000" stroke-miterlimit="10" stroke-width="0.8px" transform-origin="50% 50%" transform="scale(0.56) rotate(45)" width="100%" height="100%"/>
+                    break;
+                case CoinColor.Yellow:
+                    <circle fill="#fde71b" cx="50" cy="50" r="40"/>
+                    <circle fill="#ffffff" stroke="#000" stroke-miterlimit="10" stroke-width="0.4px" cx="50" cy="50" r="30"/>
+                    break;
+                default:
+                    throw new ArgumentOutOfRangeException();
             }
             <text font-size="40px" x="50%" y="54%" dominant-baseline="middle" text-anchor="middle">@_content</text>
         </svg>
@@ -26,22 +26,16 @@
 </div>
 
 @code{
-    private string _color = "";
+    private CoinColor? _color;
 
     /// <summary>
     /// The coin color and type.
     /// </summary>
     [CascadingParameter]
-    public string? CascadingColor { get; set; }
+    public CoinColor? CascadingColor { get; set; }
 
     [Parameter]
-    public string Color { get; set; } = "red";
-
-    /// <summary>
-    /// The visibility of the badge.
-    /// </summary>
-    [Parameter]
-    public bool Visible { get; set; } = true;
+    public CoinColor? Color { get; set; }
 
     /// <summary>
     /// Content you want inside the badge. Supported types are string and integer.
@@ -59,10 +53,12 @@
             int numberContent => numberContent.ToString(),
             _ => null
         };
-        
+
         _color = CascadingColor switch
         {
-            { } color => color,
+            CoinColor.Blue => CoinColor.Blue,
+            CoinColor.Red => CoinColor.Red,
+            CoinColor.Yellow => CoinColor.Yellow,
             _ => Color
         };
     }
