--- a/NegotiationGame.v2/Client/_Imports.razor
+++ b/NegotiationGame.v2/Client/_Imports.razor
@@ -11,3 +11,5 @@
 @using MudBlazor
 @using NegotiationGame.v2.Client
 @using NegotiationGame.v2.Client.Shared
+@using NegotiationGame.v2.Shared.GameDomain;
+@using NegotiationGame.v2.Client.Service
