--- a/NegotiationGame.v2/Client/Components/Coin.razor
+++ b/NegotiationGame.v2/Client/Components/Coin.razor
@@ -1,7 +1,7 @@
 ﻿<div style="max-width:500px;">
     @if (_color is not null)
     {
-        <svg viewBox="0 0 100 100" width="100%" height="auto" xmlns="http://www.w3.org/2000/svg">
+        <svg viewBox="0 0 100 100" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg">
             <circle fill="#888c86" cx="50" cy="50" r="50"/>
             @switch (_color)
             {
